--- a/Documentation/House_model/7R4Cmodel.tex
+++ b/Documentation/House_model/7R4Cmodel.tex
@@ -1,24 +1,24 @@
-\section{2 Zones house model 7R-4C network}
+\section{2 Zones house model 7R4C network}
 
-The 7R4C structure implemented is shown in Figure \ref{fig:schematic7R4C}.
+The 4R-7C house model structure is implemented as described below:
 	
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1.0\columnwidth]{Pictures/House_electrical_circuits overview.png}
-	\caption[Short title]{Schematic of 2 zones house model}
-	\label{fig:schematic7R4C}
+	\caption[Short title]{Schematic of a 2 zones house model}
+	\label{fig:schema7R4C}
 	\end{figure} 
 	
-The equivalent electrical 7R-4C network with components and topology is given in Fig. \ref{fig:eq7R4C}.
+The equivalent electrical 7R-4C network with components and topology is given in Fig. \ref{fig:elec7R4C}.
 
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1.0\columnwidth]{Pictures/2_Zones_house_circuits.png}
 	\caption[Short title]{R-C circuits of 2 zones house model}
-	\label{fig:eq7R4C}
+	\label{fig:elec7R4C}
 	\end{figure}
 
-with:\\
+with:
 \begin{itemize}
     \item \texttt{T\_outdoor} : outdoor temperature [$\degr C$] 
     \item \texttt{T\_air\_1}  : zone 1 air temperature [$\degr C$]
@@ -33,5 +33,4 @@ with:\\
     \item \texttt{R\_air\_21} : resistance value of air flow from zone 2 to zone 1.
 
 \end{itemize}
-
 \newpage
