--- a/Documentation/House_model/NEN_ISO.tex
+++ b/Documentation/House_model/NEN_ISO.tex
@@ -1,6 +1,6 @@
 \section{NEN and ISO}
 
-The list of NEN and ISO standards used in the calculation:
+The list of NEN and ISO standard used in the calculation:
 
 \begin{itemize}
     \item NTA 8800
@@ -10,4 +10,4 @@ The list of NEN and ISO standards used in the calculation:
     \item NEN 7120
 \end{itemize}
 
-%\newpage
+\newpage
