--- a/Documentation/House_model/mybibliography.bib
+++ b/Documentation/House_model/mybibliography.bib
@@ -4,7 +4,7 @@
     title = "Lumped-element model",
     url  = "https://en.wikipedia.org/wiki/Lumped-element_model",
     addendum = "",
-    keywords = "latex, GIGO"
+    keywords = "latex,GIGO"
 }
 
 @online{HTTHERMO,
@@ -69,9 +69,21 @@
 @online{ID,
 	ALTauthor = {author},
 	ALTeditor = {editor},
-	title = {EnergieVademecum, Energy-conscious design of new-build homes},
+	title = {EnergieVademecum Energy-conscious design of new-build homes},
 	date = {date},
-	url = {https://v-1isso-1nl-1y6tawt2z0091.stcproxy.han.nl/q/9d67bdb7/}
+	url = {https://v-1isso-1nl-1y6tawt2z0091.stcproxy.han.nl/q/9d67bdb7/},
+	OPTsubtitle = {subtitle},
+	OPTtitleaddon = {titleaddon},
+	OPTlanguage = {language},
+	OPTversion = {version},
+	OPTnote = {note},
+	OPTorganization = {organization},
+	OPTdate = {date},
+	OPTmonth = {month},
+	OPTyear = {year},
+	OPTaddendum = {addendum},
+	OPTpubstate = {pubstate},
+	OPTurldate = {urldate},
 }
 
 @online{RVALUE,
@@ -85,7 +97,7 @@
 @online{VOORBEELD,
 	author = "",
 	title = "Voorbeeldwoningen 2011",
-	url = {https://www.rvo.nl/onderwerpen/duurzaam-ondernemen/gebouwen/woningbouw/particuliere-woningen/voorbeeldwoningen},
+	url  = {https://www.rvo.nl/onderwerpen/duurzaam-ondernemen/gebouwen/woningbouw/particuliere-woningen/voorbeeldwoningen},
 	addendum = "",
 	keywords = ""
 }
@@ -95,15 +107,39 @@
 	ALTeditor = {editor},
 	title = {Transmission Heat Loss through Building Elements},
 	date = {date},
-	url = {https://www.engineeringtoolbox.com/heat-loss-transmission-d_748.html}
+	url = {https://www.engineeringtoolbox.com/heat-loss-transmission-d_748.html},
+	OPTsubtitle = {subtitle},
+	OPTtitleaddon = {titleaddon},
+	OPTlanguage = {language},
+	OPTversion = {version},
+	OPTnote = {note},
+	OPTorganization = {organization},
+	OPTdate = {date},
+	OPTmonth = {month},
+	OPTyear = {year},
+	OPTaddendum = {addendum},
+	OPTpubstate = {pubstate},
+	OPTurldate = {urldate},
 }
 
 @online{SolarHeat,
 	ALTauthor = {author},
 	ALTeditor = {editor},
 	title = {Solar Heat Gain Coefficient},
-	date = {},
-	url = {https://www.e-education.psu.edu/egee102/node/2019}
+	date = {date},
+	url = {https://www.e-education.psu.edu/egee102/node/2019},
+	OPTsubtitle = {subtitle},
+	OPTtitleaddon = {titleaddon},
+	OPTlanguage = {language},
+	OPTversion = {version},
+	OPTnote = {note},
+	OPTorganization = {organization},
+	OPTdate = {date},
+	OPTmonth = {month},
+	OPTyear = {year},
+	OPTaddendum = {addendum},
+	OPTpubstate = {pubstate},
+	OPTurldate = {urldate},
 }
 
 
@@ -112,7 +148,19 @@
 	ALTeditor = {editor},
 	title = {R-waarde},
 	date = {date},
-	url = {https://www.isover.nl/producten/mupan-facade}
+	url = https://www.isover.nl/producten/mupan-facade},
+	OPTsubtitle = {subtitle},
+	OPTtitleaddon = {titleaddon},
+	OPTlanguage = {language},
+	OPTversion = {version},
+	OPTnote = {note},
+	OPTorganization = {organization},
+	OPTdate = {date},
+	OPTmonth = {month},
+	OPTyear = {year},
+	OPTaddendum = {addendum},
+	OPTpubstate = {pubstate},
+	OPTurldate = {urldate},
 }
 
 
@@ -141,6 +189,7 @@
 	journal={ZTL},
 	year={1997}
 }
+publisher={Version}
 
 @misc{SO:PythonModuleShort,
 	author = {{Anuj on Stack Overflow}},
@@ -159,4 +208,13 @@
 	volume = 5060,
 	url = {https://www.nen.nl/NEN-Shop/Norm/NEN-50602008-nl.htm},
 	note = "Visited 2015-10-21"
+}
+
+@inbook{zontoetreding,
+    author = {ISSO},
+    title = "Handboek HBz Zonnestraling en zontoetreding",
+    publisher = "kennisbank",
+    year = "2010  ",
+    chapter = "5.5.1 en 5.2",
+    ISBN = "978-90-5044-190-2"
 }
