--- a/Documentation/House_model/House_model.tex
+++ b/Documentation/House_model/House_model.tex
@@ -64,20 +64,23 @@ Arnhem, The Netherlands} %\\
 
 \input{RCvalues}
 
-\include{Simulink model}
+% \input{2R2Cmodel}
 
-\input{2R2Cmodel}
+\input{Simulink_model}
 
 \input{Simulationandverification}
 
+\input{Heat demand prediction base on machine learning}
 
-\input{7R4Cmodel}
+% \input{7R4Cmodel}
 
-\input{NEN_ISO}
+% \input{NEN_ISO}
 
 \input{AppendixI}
 
 \input{AppendixII}
+
+\input{AppendixIII}
 
 %\bibliography{mybibliography}
 \printbibliography[heading=bibintoc]
