--- a/Documentation/House_model/Simulationandverification.tex
+++ b/Documentation/House_model/Simulationandverification.tex
@@ -65,7 +65,7 @@ For the row house the model calculates a sum of the yearly energy needs of 19776
 
 The results give an indication that the model is on the right result range for detached and row house.
 
-The plot on figure 9, show the comparison of simulation results and annual heating consumption in Voorbeeldwoningen 2011 \cite{VOORBEELD}. More results can be found in Appendix B
+The plot on figure \ref{fig:Simulationresults}, show the comparison of simulation results and annual heating consumption in Voorbeeldwoningen 2011 \cite{VOORBEELD}. More results can be found in Appendix B
 
 \begin{figure}[H]
 	\centering
@@ -75,7 +75,7 @@ The plot on figure 9, show the comparison of simulation results and annual heati
 	\end{figure}
 \newpage
 
-The graph in figure 9 shows the yearly heating demand needed for difference outdoor temperature.
+The graph in figure \ref{fig:heatingvstemp} shows the yearly heating demand needed for difference outdoor temperature.
 It is clearly show the typical whether condition in the Netherlands where most of the energy use for heating happen at temperature range from 4 to 8 degree $^oC$.
 
 \begin{figure}[H]
