--- a/Documentation/House_model/mybibliography.bib
+++ b/Documentation/House_model/mybibliography.bib
@@ -7,6 +7,23 @@
     keywords = "latex,GIGO"
 }
 
+
+@online{Rvalues_insulation,
+    author = "",
+    title = "R-value (insulation)",
+    url  = "https://en.wikipedia.org/wiki/R-value_(insulation)#cite_note-Standardization-4",
+    addendum = "",
+    keywords = "latex,R-value"
+}
+
+@online{AbsTR,
+    author = "",
+    title = "Absolute thermal resistance",
+    url  = "https://en.wikipedia.org/wiki/Thermal_resistance",
+    addendum = "",
+    keywords = "latex,Analogies"
+}
+
 @online{HTTHERMO,
 	author = "",
 	title = "Heat-transfer-thermodynamics",
