--- a/Documentation/House_model/AppendixI.tex
+++ b/Documentation/House_model/AppendixI.tex
@@ -2,6 +2,10 @@
 \appendix
 \section{Dwelling parameters calculation}
 The initial parameters value for House model (row house 1975 to 1991) are listed in the table below\cite{VOORBEELD}:
+
+
+\begin{table}[H]
+    \centering
     
 \begin{tabular}{|p{3cm}||p{7cm}||p{3cm}||p{3cm}|}
  \hline
@@ -19,7 +23,7 @@ $A_{internal{\_}mass}$ & Floor and internal walls surface    & 170 & $m^2$\\
  $V_{dwelling}$ & Internal volume & 275.6 &$m^3$\\
   \hline
 
- $Rc_{facade}$ & Envelope thermal resistance, R-value & 1.3 &  $\frac{m^2}{kw}$\\
+ $Rc_{facade}$ & Thermal resistance per unit area (thermal insulation), R-value & 1.3 &  $\frac{m^2}{kw}$\\
   \hline
 
  $U_{glass}$& Window thermal transmittance, U-value & 2.9 &$\frac{W}{m^2k}$\\
@@ -63,29 +67,33 @@ n & Ventilation, air changes per hour  & 0.55 & $[number/h]$\\
  $c_{air}$& specific heat capacity air  & 1005 &$\frac{J}{KgK}$\\
  \hline
  
- $\alpha_{i{\_}facade}$ & Interior surface thermal resistance $R_{i} =\frac{1}{\alpha_{i{\_}facade}}$  (Rc-Waarde=0.13,ISO 6946) & 8 & \\
+ $\alpha_{i{\_}facade}$ & Heat transfer coefficient. Interior surface thermal resistance $R_{i} =\frac{1}{\alpha_{i{\_}facade}}$  (Rc-Waarde=0.13,ISO 6946) & 8 & $\frac{W}{m^2k}$ \\
  \hline
  
- $\alpha_{e{\_}facade}$ & Exterior surface thermal resistance $R_{se} =\frac{1}{\alpha_{e{\_}facade}}$ (0,04 $\frac{m^2k}{W}$ ,ISO 6946,external surfaces or external side of exterior wall) & 23 &$\frac{W}{m^2k}$\\
+ $\alpha_{e{\_}facade}$ & Heat transfer coefficient. Exterior surface thermal resistance $R_{se} =\frac{1}{\alpha_{e{\_}facade}}$ (0,04 $\frac{m^2k}{W}$ ,ISO 6946,external surfaces or external side of exterior wall) & 23 &$\frac{W}{m^2k}$\\
  \hline
  
- $\alpha_{internal{\_}mass}$& Interal wall thermal resistance $ R_{air{\_}wall} = \frac{1}{A_{internal{\_}mass} \cdot \alpha_{internal{\_}mass}} $ Resistance indoor air-wall  & 8 &$\frac{W}{m^2k}$\\
+ $\alpha_{internal{\_}mass}$& Heat transfer coefficient. Internal wall thermal resistance $ R_{air{\_}wall} = \frac{1}{A_{internal{\_}mass} \cdot \alpha_{internal{\_}mass}} $ Resistance indoor air-wall  & 8 &$\frac{W}{m^2k}$\\
  \hline
  
  $\rho_{internal{\_}masss}$& Density construction in [kg/m3] & 1 &$\frac{W}{m^2k}$\\
  \hline
 
 \end{tabular}
-\\
 
+\caption{Values constants and parameters.}
+\label{tab:Paramteres}
+\end{table}
+
+\newpage
 Volume floor and internal walls construction [m3]: $V_{internal,mass} = A_{internal,mass} \cdot th_{internal,mass}$
 
-Ventilation, volume air flow [m3/s] : $qV = \frac{n \cdot V_{dwelling}}{3600} $  
+Ventilation, volume air flow $[\frac{m^3}{s}]$: $qV = \frac{n \cdot V_{dwelling}}{3600} $  
 
-Ventilation, mass air flow [kg/s] : $qm = qV \cdot \rho_{air} $  
+Ventilation, mass air flow $[\frac{kg}{s}]$ : $qm = qV \cdot \rho_{air} $  
 \newline
 
-Calculation of the resistances.
+\textbf{Calculation of the resistances.}
 \newline
 
 Resistance indoor air-wall: $R_{air_{\_}wall} = \frac{1}{A_{internal,mass} \cdot \alpha_{internal,mass}} $ 
@@ -95,7 +103,7 @@ U-value indoor air-facade: $U =\frac{1}{\frac{1}{\alpha_{i{\_}facade}}   + R{c{\
 Resistance indoor air-outdoor air: $R_{air{\_}outdoor} = \frac{1}{A_{facade} \cdot U + A_{glass} \cdot U_{glass} + qm \cdot c_{air}}$ 
 \newline
 
-Calculation of the capacities.
+\textbf{Calculation of the capacities.}
 \newline
 
 Capacity indoor air and walls: $C_{air} =\frac{rho_{internal{\_}mass} \cdot c_{internal{\_}mass} \cdot V_{internal{\_}mass}}{2} + \rho_{air} \cdot c_{air} \cdot V_{dwelling}  $ 
