--- a/Documentation/House_model/AppendixIII.tex
+++ b/Documentation/House_model/AppendixIII.tex
@@ -9,6 +9,7 @@ The list of NEN and ISO standard used in the calculation:
     \item ISO 6946
     \item ISO 10077-2
     \item NEN 7120
+    \item NEN 5060\cite{NEN5060}
 \end{itemize}
 
 \newpage
