--- a/Documentation/House_model/mybibliography.bib
+++ b/Documentation/House_model/mybibliography.bib
@@ -199,6 +199,14 @@
     keywords  = "knuth,programming"
 }
 
+@article{Architecture,
+    author ="Alfredo Esteves and M.Victoria Mercado and Carolina Ganem Daniel Gelardi ",
+    title = "Positioning and Design Recommendations for Materials of Efficient Thermal Storage Mass in Passive Buildings",
+    journal =      "Architecture Research",
+    year =         "2017",
+    DOI =          "10.5923/j.arch.20170702.01",
+    keywords  = "Arch"
+}
 
 @misc{afjei1997compressor,
 	title={Compressor heat pump including frost and cycle losses},
