Add reference for thermal capacitance (heat capacity)

--- a/Documentation/House_model/AppendixI.tex
+++ b/Documentation/House_model/AppendixI.tex
@@ -107,9 +107,9 @@ Resistance indoor air-outdoor air: $R_{air{\_}outdoor} = \frac{1}{A_{facade} \cd
 \newline
 The heat capacity of interior walls can be determined using half of the actual wall thickness because both surfaces are considered as storing energy \cite{Architecture}.
 
-Capacity indoor air and walls: $C_{air} =\frac{rho_{internal{\_}mass} \cdot c_{internal{\_}mass} \cdot V_{internal{\_}mass}}{2} + \rho_{air} \cdot c_{air} \cdot V_{dwelling}  $ 
+Thermal capacity indoor air and walls: $C_{air} =\frac{rho_{internal{\_}mass} \cdot c_{internal{\_}mass} \cdot V_{internal{\_}mass}}{2} + \rho_{air} \cdot c_{air} \cdot V_{dwelling}  $ 
 
-Capacity walls : $C_{wall} =\frac{rho_{internal{\_}mass} \cdot c_{internal{\_}mass} \cdot V_{internal{\_}mass}}{2}$   
+Thermal capacity walls : $C_{wall} =\frac{rho_{internal{\_}mass} \cdot c_{internal{\_}mass} \cdot V_{internal{\_}mass}}{2}$   
 
 \newpage
   
