--- a/Documentation/House_model/mybibliography.bib
+++ b/Documentation/House_model/mybibliography.bib
@@ -7,6 +7,13 @@
     keywords = "latex,GIGO"
 }
 
+@online{Thermalmass,
+    author = "",
+    title = "Thermal mass",
+    url  = "https://en.wikipedia.org/wiki/Thermal_mass",
+    addendum = "",
+    keywords = "latex,Thermalmass"
+}
 
 @online{Rvalues_insulation,
     author = "",
