--- a/Documentation/House_model/RCvalues.tex
+++ b/Documentation/House_model/RCvalues.tex
@@ -133,14 +133,15 @@ C_{wall}\frac{dT_{wall}}{dt}=\frac{T_{air}-T_{wall}}{R_{air_{\_}wall}} + (1-CF)\
  \begin{itemize}
       \item CF: convection factor (solar radiation): the convection factor is the part of the solar radiation that enters the room and is released directly convectively into the room.
       \item $\dot{Q}_{inst}$: delivered heat from heating system (radiator) [W].
+      \item $\dot{Q}_{inernal}$: internal heat [W].
       \item $\dot{Q}_{solar}$: heat from solar irradiation [W].
       \item $T_{air}$: indoor air temperature $^o$C.
       \item $T_{outdoor}$: outdoor temperature $^o$C.
       \item $T_{wall}$: wall temperature $^o$C.
       \item $R_{air_{\_}wall}$: walls surface resistance [$\frac{K}{W}$].
       \item $R_{air_{\_}outdoor}$: outdoor surface resistance [$\frac{K}{W}$].
-      \item $C_{air}$: air capacity [$\frac{J}{K}$].
-      \item $C_{wall}$: wall capacity [$\frac{J}{K}$].
+      \item $C_{air}$: air thermal capacitance (heat capacity) [$\frac{J}{K}$]\cite{Thermalmass}.
+      \item $C_{wall}$: wall thermal capacitance (heat capacity) [$\frac{J}{K}$]\cite{Thermalmass}.
     \end{itemize}
 
 \newpage   
