--- a/Documentation/House_model/introduction.tex
+++ b/Documentation/House_model/introduction.tex
@@ -12,8 +12,8 @@ Building energy simulation is a vast field of research that started in the late 
 \end{itemize}
 
 
-White box models are based on the equations related to the fundamental laws of energy and mass balance and heat transfer. White box models can be differentiated in two types, \emph{distributed} parameter models and \emph{lumped} parameter models. Lumped parameter models simplify the description of distributed physical systems into discrete entities that approximate the behavior of a distributed system. The advantage of using lumped models is the decrease in simulation time \textbf{(Ramallo-González et al.)}. White box models are of special interest for the design phase as they are used to predict and analyse the performance of the building envelope and building systems.
-Black box models are based on the statistical relation between input and output system values. The statistical relation between input and output is based on actual data. The relation between the parameters can differ based on the amount of data and the method used to analyze the relation. Currently, there is a large and active field of research about statistical models that are used on black box models \textbf{(Coacley et al.)}. Black box models are of special interest when there is a large amount of actual input and output data available. 
+White box models are based on the equations related to the fundamental laws of energy and mass balance and heat transfer. White box models can be differentiated in two types, \emph{distributed} parameter models and \emph{lumped} parameter models. Lumped parameter models simplify the description of distributed physical systems into discrete entities that approximate the behavior of a distributed system. The advantage of using lumped models is the decrease in simulation time \textbf{(Ramallo-González et al.\cite{Alfonso})}. White box models are of special interest for the design phase as they are used to predict and analyse the performance of the building envelope and building systems.
+Black box models are based on the statistical relation between input and output system values. The statistical relation between input and output is based on actual data. The relation between the parameters can differ based on the amount of data and the method used to analyze the relation. Currently, there is a large and active field of research about statistical models that are used on black box models \textbf{(Coacley et al.\cite{Coakley})}. Black box models are of special interest when there is a large amount of actual input and output data available. 
 
 Grey box models are hybrid models that aim to combine the advantages of both approaches. In order to use them it is necessary to implement some equations and it is also required to have actual data of inputs and outputs.
 
