--- a/Documentation/House_model/mybibliography.bib
+++ b/Documentation/House_model/mybibliography.bib
@@ -208,11 +208,71 @@
 
 @article{Architecture,
     author ="Alfredo Esteves and M.Victoria Mercado and Carolina Ganem Daniel Gelardi ",
-    title = "Positioning and Design Recommendations for Materials of Efficient Thermal Storage Mass in Passive Buildings",
+    title = "Development of a simplified and accurate building model based on electrical analogy",
     journal =      "Architecture Research",
     year =         "2017",
     DOI =          "10.5923/j.arch.20170702.01",
     keywords  = "Arch"
+}
+
+@Article{en11040890,
+AUTHOR = {Bagheri, Ali and Feldheim, Véronique and Ioakimidis, Christos S.},
+TITLE = {On the Evolution and Application of the Thermal Network Method for Energy Assessments in Buildings},
+JOURNAL = {Energies},
+VOLUME = {11},
+YEAR = {2018},
+NUMBER = {4},
+ARTICLE-NUMBER = {890},
+URL = {https://www.mdpi.com/1996-1073/11/4/890},
+ISSN = {1996-1073},
+DOI = {10.3390/en11040890}
+
+}
+
+@unknown{Bacher,
+author = {Madsen Henrik and Bacher Peder},
+year = {2015},
+month = {12},
+pages = {},
+title = {Thermal Performance Characterization using Time Series Data; IEA EBC Annex 58 Guidelines},
+doi = {10.13140/RG.2.1.1564.4241}
+}
+
+@book{book,
+author = {Bacher, Peder and Madsen, Henrik},
+year = {2010},
+month = {01},
+pages = {},
+title = {Experiments and Data for Building Energy Performance Analysis}
+
+}
+
+@article{Coakley,
+    author =" Daniel Coakley and Paul Raftery and Marcus Keane",
+    title = "A review of methods to match building energy simulation models to measured data",
+    journal =      "Renewable and Sustainable Energy Reviews
+Volume 37, Pages 123-141 ",
+    year =         "2014",
+    DOI =          "10.1016/j.rser.2014.05.007",
+    keywords  = "buildings energy"
+}
+
+@article{Alfonso,
+    author ="Alfonso P.Ramallo-GonzálezaMatthew  and E.EamesaDavid and A.Coleyb",
+    title = "Positioning and Design Recommendations for Materials of Efficient Thermal Storage Mass in Passive Buildings",
+    journal =      "Energy and Buildings Volume 60,Pages 174-184",
+    year =         "2013",
+    DOI =          "10.1016/j.enbuild.2013.01.014",
+    keywords  = "buildings"
+}
+
+@article{Fraisse,
+    author ="Fraisse and Viardot.C and Lafabrie.O and Achard G",
+    title = "Lumped parameter models for building thermal modelling: An analytic approach to simplifying complex multi-layered constructions",
+    journal =      "Energy and Buildings Volume 34, Issue 10, Pages 1017-1031",
+    year =         "2002",
+    DOI =          "10.1016/S0378-7788(02)00019-1",
+    keywords  = "buildings"
 }
 
 @misc{afjei1997compressor,
